src/objects/Governance__c.object
<CustomObject>
    <fields>
        <fullName>Date_Governance_Enacted__c</fullName>
        <label>Date Governance Enacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Next_Review__c</fullName>
        <label>Date Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Of_Governance_Required__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Degree Of Governance Required</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Explanation_for_under_100__c</fullName>
        <label>Explanation for under 100%</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geographic_Constraints__c</fullName>
        <label>Geographic Constraints</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Governance_Description__c</fullName>
        <label>Governance Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Governance_ID__c</fullName>
        <label>Governance ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who owns the Governance record</description>
        <label>Governance Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Governances</relationshipLabel>
        <relationshipName>Governances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Governance_Type__c</fullName>
        <label>Governance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Best Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Obligation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacts_of_Non_compliance__c</fullName>
        <label>Impacts of Non-compliance</label>
        <picklist>
            <picklistValues>
                <fullName>Fines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breach of Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inefficiencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Internal_or_External__c</fullName>
        <label>Internal or External</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone_Date__c</fullName>
        <label>Milestone Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Governance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Governance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Governance__c.Parent_or_Subsidiary_Governance__c</field>
                <operation>equals</operation>
                <value>Parent</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Governance__c</referenceTo>
        <relationshipLabel>Subsidiary Governance</relationshipLabel>
        <relationshipName>Governance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_or_Subsidiary_Governance__c</fullName>
        <label>Parent or Subsidiary Governance</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regulation_Status__c</fullName>
        <inlineHelpText>Select current status of this regulation</inlineHelpText>
        <label>Regulation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Governance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Governance_Owner__c</columns>
        <columns>Milestone__c</columns>
        <columns>Parent_or_Subsidiary_Governance__c</columns>
        <columns>Degree_Of_Governance_Required__c</columns>
        <columns>Governance_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Governance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Degree_Required_Max_is_100_percent</fullName>
        <active>true</active>
        <description>Degree Required Must be 100% or Less.</description>
        <errorConditionFormula>Degree_Of_Governance_Required__c  &gt;= 100 ||  Degree_Of_Governance_Required__c   &lt; 0</errorConditionFormula>
        <errorDisplayField>Degree_Of_Governance_Required__c</errorDisplayField>
        <errorMessage>Degree Required Must be Between 100% and 0%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Subsidiary_than_Must_have_Parent</fullName>
        <active>true</active>
        <description>If Subsidiary is selected you must have a Parent Governance</description>
        <errorConditionFormula>IF(ISPICKVAL( Parent_or_Subsidiary_Governance__c , &quot;Subsidiary&quot;) &amp;&amp;  ISBLANK(Parent_Governance__c ), TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Parent_or_Subsidiary_Governance__c</errorDisplayField>
        <errorMessage>If Subsidiary is selected you must have a Parent Governance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Less_than_100_Required</fullName>
        <active>true</active>
        <description>If the Degree Required is less than 100% you must provide an explanation.</description>
        <errorConditionFormula>If( Degree_Of_Governance_Required__c  &lt; 1.0 ,  ISBLANK( Explanation_for_under_100__c), False)</errorConditionFormula>
        <errorDisplayField>Explanation_for_under_100__c</errorDisplayField>
        <errorMessage>If the Degree Required is less than 100% you must provide an explanation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Governance_Cannot_have_Parent</fullName>
        <active>true</active>
        <description>If you select Parent Governance than you can not have a lookup to another Parent Governance</description>
        <errorConditionFormula>IF(ISPICKVAL( Parent_or_Subsidiary_Governance__c ,&quot;Parent&quot;) &amp;&amp; NOT(ISBLANK( Parent_Governance__c )),TRUE,FALSE)</errorConditionFormula>
        <errorDisplayField>Parent_Governance__c</errorDisplayField>
        <errorMessage>If you select Parent Governance than you can not have a lookup to another Parent Governance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Review_Date_Must_be_After_Enact_Date</fullName>
        <active>true</active>
        <description>Date of Next Review Must come After the Date Enacted.</description>
        <errorConditionFormula>Date_Next_Review__c   &lt;   Date_Governance_Enacted__c</errorConditionFormula>
        <errorDisplayField>Date_Next_Review__c</errorDisplayField>
        <errorMessage>Date of Next Review Must come After the Date Enacted.</errorMessage>
    </validationRules>
</CustomObject>